# clp-api

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: app.yml
docker/server/: Dockerfile
docker/tests/: Dockerfile
func_tests/: general_fixtures.py  test_application.py  test_db_creation.py  test_orders.py  test_user.py
project-team-log/: CLP API Routes and Contracts.md  ProjectBacklog.md  ProjectSuggestions.md  Retrospective.md  RoleDistribution.md
src/homework/: app.py  asgi.py
src/homework/api/: application.py  contracts.py  orders.py  security.py  user.py
src/homework/db/: connection_url.py  crud.py  engine.py  models.py
tests/: test_app.py  test_security.py  test_user.py
unit_tests/: test_application.py  test_crud.py  test_orders.py
